@@ -72,6 +72,8 @@
           (http://www.packetfence.org/mantis/view.php?id=409)
         recovery.pl in single thread mode
           (http://www.packetfence.org/mantis/view.php?id=411)
+        recovery.pl should also validate locationlog entries
+          (http://www.packetfence.org/mantis/view.php?id=412)
 
 1.7.3
         not all port security traps are handled
